test/files/neg/t1960.check
t1960.scala:5: error: class Aclass needs to be abstract, since variable p in trait TBase of type Int is not defined
(Note that variables need to be initialized to be defined)
class Aclass (p: Int) extends TBase { def g() { f(p) } }
      ^
one error found
